# python-for-dummies

./: .gitignore  404.html  index.html  main.py  mkdocs.yml  notebook.html  primeiros-passos.html  primeiros-passos.ipynb.bak  pyproject.toml  sitemap.xml  sobre.html
.github/workflows/: deploy.yml
docs/: .gitignore  conteudo.md.bak  index.md  notebook.ipynb.bak  sobre.md
docs/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
docs/assets/: lucas.jpg.bak
docs/javascripts/: extra.js
docs/overrides/: main.html
docs/overrides/partials/: copyright.html  main.html
docs/primeiros-passos/: instalacao.md  interface-do-jupyter.ipynb  interface.ipynb  introducao-ao-markdown.ipynb  introducao-ao-python.ipynb  jupyter-interface.ipynb  python.ipynb
docs/primeiros-passos/.ipynb_checkpoints/: jupyter-interface-checkpoint.ipynb
docs/saida-de-dados/: formatacao-de-strings.ipynb  markdown-rico.ipynb  modulos-e-pacotes.ipynb  saida-de-dados.ipynb
docs/stylesheets/: extra.css
javascripts/: extra.js
overrides/: main.html
overrides/partials/: footer.html
primeiros-passos/: instalacao.html  interface-do-jupyter.html  interface-do-jupyter.ipynb  introducao-ao-markdown.html  introducao-ao-python.html
saida-de-dados/: formatacao-de-strings.html  formatacao-de-strings.ipynb  markdown-rico.html  markdown-rico.ipynb  modulos-e-pacotes.html  modulos-e-pacotes.ipynb  saida-de-dados.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
stylesheets/: extra.css
(+1 files in other folders)
