[project]
name = "python-for-dummies"
version = "0.1.0"
description = "Site do curso de Python for dummies da UFAC"
authors = [{ name = "Lucas Lima Rodrigues", email = "lucas.rodrigues@ufac.br" }]
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipython = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.3"
mkdocs-macros-plugin = "^1.3.7"
jinja2 = "^3.1.5"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
taskipy = "^1.14.1"
mkdocs-jupyter = "^0.25.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort ."
